Fixed horizontal scrolling in the global sidebar on mobile.

--- a/src/css/stats.css
+++ b/src/css/stats.css
@@ -64,10 +64,18 @@
 }
 
 /* Tablet in portrait */
-@media only screen and (min-width: 768px) and (max-width: 991px) {}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .stats-line {
+    grid-template-columns: 1fr;
+  }
+}
 
 /* Tablet in landscape */
-@media only screen and (min-width: 992px) and (max-width: 1199px) {}
+@media only screen and (min-width: 992px) and (max-width: 1299px) {
+  .stats-line {
+    grid-template-columns: 1fr;
+  }
+}
 
 /* PC */
-@media only screen and (min-width: 1200px) {}
+@media only screen and (min-width: 1300px) {}
